Update OAuth credential handling in Gmail, Google Calendar, Google Drive, and Google Sheets documentation to use unified access token environment variables and improve code consistency.

--- a/docs/content/plugins/gmail/get-credentials.mdx
+++ b/docs/content/plugins/gmail/get-credentials.mdx
@@ -58,20 +58,10 @@ The Gmail plugin uses OAuth 2.0 authentication exclusively.
 The preferred method is to store OAuth credentials in the database using the keys API:
 
 ```ts
-await corsair.gmail.keys.setClientId('your-client-id');
-await corsair.gmail.keys.setClientSecret('your-client-secret');
-await corsair.gmail.keys.setRedirectUrl('https://yourapp.com/auth/gmail/callback');
-```
-
-After users complete the OAuth flow, access tokens are automatically stored in the database. You can also set them manually:
-
-```ts
-await corsair
-    .withTenant('default')
-    .gmail.keys.setAccessToken('access-token');
-await corsair
-    .withTenant('default')
-    .gmail.keys.setRefreshToken('refresh-token');
+await corsair.withTenant('default').keys.gmail.setClientId('your-client-id');
+await corsair.withTenant('default').keys.gmail.setClientSecret('your-client-secret');
+await corsair.withTenant('default').gmail.keys.setAccessToken('your-access-token');
+await corsair.withTenant('default').gmail.keys.setRefreshToken('your-refresh-token');
 ```
 
 Alternatively, you can provide credentials directly in the plugin configuration:
@@ -82,6 +72,8 @@ gmail({
     credentials: {
         clientId: process.env.GMAIL_CLIENT_ID,
         clientSecret: process.env.GMAIL_CLIENT_SECRET,
+        accessToken: process.env.GMAIL_ACCESS_TOKEN,
+        refreshToken: process.env.GMAIL_REFRESH_TOKEN,
     },
 })
 ```
