--- a/docs/content/plugins/googlecalendar/get-credentials.mdx
+++ b/docs/content/plugins/googlecalendar/get-credentials.mdx
@@ -45,20 +45,10 @@ The Google Calendar plugin uses OAuth 2.0 authentication exclusively.
 The preferred method is to store OAuth credentials in the database using the keys API:
 
 ```ts
-await corsair.googlecalendar.keys.setClientId('your-client-id');
-await corsair.googlecalendar.keys.setClientSecret('your-client-secret');
-await corsair.googlecalendar.keys.setRedirectUrl('https://yourapp.com/auth/googlecalendar/callback');
-```
-
-After users complete the OAuth flow, access tokens are automatically stored in the database. You can also set them manually:
-
-```ts
-await corsair
-    .withTenant('default')
-    .googlecalendar.keys.setAccessToken('access-token');
-await corsair
-    .withTenant('default')
-    .googlecalendar.keys.setRefreshToken('refresh-token');
+await corsair.withTenant('default').keys.googlecalendar.setClientId('your-client-id');
+await corsair.withTenant('default').keys.googlecalendar.setClientSecret('your-client-secret');
+await corsair.withTenant('default').googlecalendar.keys.setAccessToken('your-access-token');
+await corsair.withTenant('default').googlecalendar.keys.setRefreshToken('your-refresh-token');
 ```
 
 Alternatively, you can provide credentials directly in the plugin configuration:
@@ -69,6 +59,8 @@ googlecalendar({
     credentials: {
         clientId: process.env.GOOGLE_CALENDAR_CLIENT_ID,
         clientSecret: process.env.GOOGLE_CALENDAR_CLIENT_SECRET,
+        accessToken: process.env.GOOGLE_CALENDAR_ACCESS_TOKEN,
+        refreshToken: process.env.GOOGLE_CALENDAR_REFRESH_TOKEN,
     },
 })
 ```
