--- a/docs/content/plugins/googledrive/get-credentials.mdx
+++ b/docs/content/plugins/googledrive/get-credentials.mdx
@@ -45,20 +45,10 @@ The Google Drive plugin uses OAuth 2.0 authentication exclusively.
 The preferred method is to store OAuth credentials in the database using the keys API:
 
 ```ts
-await corsair.googledrive.keys.setClientId('your-client-id');
-await corsair.googledrive.keys.setClientSecret('your-client-secret');
-await corsair.googledrive.keys.setRedirectUrl('https://yourapp.com/auth/googledrive/callback');
-```
-
-After users complete the OAuth flow, access tokens are automatically stored in the database. You can also set them manually:
-
-```ts
-await corsair
-    .withTenant('default')
-    .googledrive.keys.setAccessToken('access-token');
-await corsair
-    .withTenant('default')
-    .googledrive.keys.setRefreshToken('refresh-token');
+await corsair.withTenant('default').keys.googledrive.setClientId('your-client-id');
+await corsair.withTenant('default').keys.googledrive.setClientSecret('your-client-secret');
+await corsair.withTenant('default').googledrive.keys.setAccessToken('your-access-token');
+await corsair.withTenant('default').googledrive.keys.setRefreshToken('your-refresh-token');
 ```
 
 Alternatively, you can provide credentials directly in the plugin configuration:
@@ -69,6 +59,8 @@ googledrive({
     credentials: {
         clientId: process.env.GOOGLE_DRIVE_CLIENT_ID,
         clientSecret: process.env.GOOGLE_DRIVE_CLIENT_SECRET,
+        accessToken: process.env.GOOGLE_DRIVE_ACCESS_TOKEN,
+        refreshToken: process.env.GOOGLE_DRIVE_REFRESH_TOKEN,
     },
 })
 ```
