--- a/docs/content/plugins/googlesheets/get-credentials.mdx
+++ b/docs/content/plugins/googlesheets/get-credentials.mdx
@@ -45,20 +45,10 @@ The Google Sheets plugin uses OAuth 2.0 authentication exclusively.
 The preferred method is to store OAuth credentials in the database using the keys API:
 
 ```ts
-await corsair.googlesheets.keys.setClientId('your-client-id');
-await corsair.googlesheets.keys.setClientSecret('your-client-secret');
-await corsair.googlesheets.keys.setRedirectUrl('https://yourapp.com/auth/googlesheets/callback');
-```
-
-After users complete the OAuth flow, access tokens are automatically stored in the database. You can also set them manually:
-
-```ts
-await corsair
-    .withTenant('default')
-    .googlesheets.keys.setAccessToken('access-token');
-await corsair
-    .withTenant('default')
-    .googlesheets.keys.setRefreshToken('refresh-token');
+await corsair.withTenant('default').keys.googlesheets.setClientId('your-client-id');
+await corsair.withTenant('default').keys.googlesheets.setClientSecret('your-client-secret');
+await corsair.withTenant('default').googlesheets.keys.setAccessToken('your-access-token');
+await corsair.withTenant('default').googlesheets.keys.setRefreshToken('your-refresh-token');
 ```
 
 Alternatively, you can provide credentials directly in the plugin configuration:
@@ -69,6 +59,8 @@ googlesheets({
     credentials: {
         clientId: process.env.GOOGLE_SHEETS_CLIENT_ID,
         clientSecret: process.env.GOOGLE_SHEETS_CLIENT_SECRET,
+        accessToken: process.env.GOOGLE_SHEETS_ACCESS_TOKEN,
+        refreshToken: process.env.GOOGLE_SHEETS_REFRESH_TOKEN,
     },
 })
 ```
