Update OAuth consent screen configuration in Google Calendar, Google Drive, and Google Sheets documentation to include detailed steps for setting up external applications and adding necessary scopes.

--- a/docs/content/plugins/googlecalendar/get-credentials.mdx
+++ b/docs/content/plugins/googlecalendar/get-credentials.mdx
@@ -31,7 +31,16 @@ The Google Calendar plugin uses OAuth 2.0 authentication exclusively.
 
 1. Go to **APIs & Services** → **Credentials**
 2. Click **Create Credentials** → **OAuth client ID**
-3. If prompted, configure the OAuth consent screen (see [Gmail plugin](/plugins/gmail/get-credentials) for detailed steps)
+3. If prompted, configure the OAuth consent screen:
+   - Choose **External** (unless you have a Google Workspace)
+   - Fill in the required information:
+     - App name
+     - User support email
+     - Developer contact information
+   - Add scopes:
+     - `https://www.googleapis.com/auth/calendar`
+   - Add test users (for testing)
+   - Click **Save and Continue** through all steps
 4. Select **Web application**
 5. Configure:
    - **Name**: Your application name
