--- a/docs/content/plugins/slack/get-credentials.mdx
+++ b/docs/content/plugins/slack/get-credentials.mdx
@@ -96,20 +96,10 @@ slack({
 The preferred method is to store OAuth credentials in the database using the keys API:
 
 ```ts
-await corsair.slack.keys.setClientId('your-client-id');
-await corsair.slack.keys.setClientSecret('your-client-secret');
-await corsair.slack.keys.setRedirectUrl('https://yourapp.com/auth/slack/callback');
-```
-
-After users complete the OAuth flow, access tokens are automatically stored in the database. You can also set them manually:
-
-```ts
-await corsair
-    .withTenant('default')
-    .slack.keys.setAccessToken('access-token');
-await corsair
-    .withTenant('default')
-    .slack.keys.setRefreshToken('refresh-token');
+await corsair.withTenant('default').keys.slack.setClientId('your-client-id');
+await corsair.withTenant('default').keys.slack.setClientSecret('your-client-secret');
+await corsair.withTenant('default').slack.keys.setAccessToken('your-access-token');
+await corsair.withTenant('default').slack.keys.setRefreshToken('your-refresh-token');
 ```
 
 Alternatively, you can provide credentials directly in the plugin configuration:
@@ -117,6 +107,10 @@ Alternatively, you can provide credentials directly in the plugin configuration:
 ```ts title="corsair.ts"
 slack({
     authType: "oauth_2",
+    credentials: {
+        clientId: process.env.SLACK_CLIENT_ID,
+        clientSecret: process.env.SLACK_CLIENT_SECRET,
+    },
 })
 ```
 
