Update HubSpot credentials documentation to remove hyperlink for HubSpot Settings for clarity

--- a/docs/content/plugins/hubspot/get-credentials.mdx
+++ b/docs/content/plugins/hubspot/get-credentials.mdx
@@ -16,7 +16,7 @@ The HubSpot plugin supports both API key and OAuth 2.0 authentication methods.
 
 ### Step 1: Create Private App
 
-1. Go to [HubSpot Settings](https://app.hubspot.com/settings)
+1. Go to HubSpot Settings
 2. Navigate to **Integrations** → **Private Apps**
 3. Click **Create a private app**
 4. Enter an app name
